--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -4,6 +4,7 @@
     "strings": {
         "heading-1": "Projet d'Etude I18n",
         "heading-2": "Qu'est-ce que i18n ?",
-        "description": "i18n est le processus de conception et de développement où les produits et/ou services sont adaptés aux langues et cultures locales spécifiques."
+        "description": "i18n est le processus de conception et de développement où les produits et/ou services sont adaptés aux langues et cultures locales spécifiques.",
+        "project-repository": "Référentiel Github"
     }
 }
