fix: US language fix

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -2,7 +2,7 @@
     "language-code": "en",
     "country-code": "US",
     "strings": {
-        "heading-1": "Study project on i18n",
+        "heading-1": "Study project about i18n",
         "heading-2": "What is i18n?",
         "description": "i18n is the design and development process where products and/or services are adapted to specific local languages and cultures.",
         "project-repository": "Github repository"
